<resources>
    <!-- General -->
    <string name="app_name">Virtual Tripmeter</string>
    <string name="title_home">Home</string>
    <string name="title_trip">Tripmeter</string>
    <string name="title_settings">Settings</string>
    <string name="copyright">MiguelNdeCarvalho and Filipe Alfaiate Ⓒ 2021</string>

    <!-- Login -->
    <string name="login_button">Login</string>
    <string name="login_welcome">Welcome %s!</string>
    <string name="login_back">Welcome back %s!</string>
    <string name="login_signup">Sign Up</string>
    <string name="login_or">-OR-</string>
    <string name="login_alternative">Sign in with</string>
    <string name="login_register_login_page">Don`t have an Account?</string>
    <string name="login_hint_username">Enter your Username</string>
    <string name="login_hint_password">Enter your Password</string>
    <string name="login_save_credentials">Remember me</string>
    <string name="login_recover">Forgot Password?</string>
    <string name="login_error_empty_username">Username is empty</string>
    <string name="login_error_empty_password">Password is empty</string>
    <string name="login_error_mismatch">Invalid username and/or password!</string>
    <string name="login_logout">Logout</string>
    <string name="login_logout_toast">We hope you come back soon %s!</string>
    <string name="login_delete">Delete account</string>
    <string name="login_delete_toast">Goodbye %s. It was nice to meet you!</string>
    <string name="login_delete_dialog_title">Delete account</string>
    <string name="login_delete_dialog_description">Do you really want to delete your account?</string>

    <!-- Home Fragment -->
    <string name="home_description">"You won't miss a note again!"</string>
    <string name="home_button">Start</string>

    <!-- Trip Fragment -->
    <string name="trip_unitKilometersHour">km/h</string>
    <string name="trip_unitMilesHour">mph</string>
    <string name="trip_unitKilometers">km</string>
    <string name="trip_unitMiles">mi</string>
    <string name="trip_totalTitle">Total</string>
    <string name="trip_totalInstructions">Long Press to Reset</string>
    <string name="trip_partialTitle">Partial</string>
    <string name="trip_partialInstructions">Tap to Reset</string>

    <!-- Settings Fragment -->
    <string name="settings_unitsButton">Use Imperial Unit of Measurement</string>
    <string name="settings_velocityText">Set base speed</string>
    <string name="settings_velocityDefault">100</string>
    <string name="settings_alertButton">Play a sound when resetting trips</string>
</resources>