<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trip.TripFragment">

    <Button
        android:id="@+id/totalButton"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:text="0.00"
        android:textAlignment="textStart"
        android:textSize="90sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.029" />

    <Button
        android:id="@+id/partialButton"
        android:layout_width="fill_parent"
        android:layout_height="250dp"
        android:layout_marginBottom="188dp"
        android:text="0.00"
        android:textAlignment="textStart"
        android:textSize="90sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/totalButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/totalKM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:text="@string/trip_unitKilometers"
        android:textColor="@color/orange_200"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/totalButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="@+id/totalButton"
        app:layout_constraintTop_toTopOf="@+id/totalButton"
        app:layout_constraintVertical_bias="0.746" />

    <TextView
        android:id="@+id/partialKM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:text="@string/trip_unitKilometers"
        android:textColor="@color/orange_200"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/partialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.921"
        app:layout_constraintStart_toStartOf="@+id/partialButton"
        app:layout_constraintTop_toBottomOf="@+id/totalButton"
        app:layout_constraintVertical_bias="0.771" />

    <TextView
        android:id="@+id/totalTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:text="@string/trip_totalTitle"
        android:textColor="@color/orange_200"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/totalButton"
        app:layout_constraintEnd_toEndOf="@+id/totalButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/partialTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:text="@string/trip_partialTitle"
        android:textColor="@color/orange_200"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/partialButton"
        app:layout_constraintTop_toBottomOf="@+id/totalButton" />

    <TextView
        android:id="@+id/totalInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:text="@string/trip_totalInstructions"
        android:textColor="@color/orange_200"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/totalButton"
        app:layout_constraintEnd_toEndOf="@+id/totalButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/totalButton"
        app:layout_constraintVertical_bias="0.869" />

    <TextView
        android:id="@+id/partialInstructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:elevation="10dp"
        android:text="@string/trip_partialInstructions"
        android:textColor="@color/orange_200"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/partialButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/partialButton"
        app:layout_constraintTop_toBottomOf="@+id/totalButton"
        app:layout_constraintVertical_bias="0.737" />

    <TextView
        android:id="@+id/currentVelocity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="104dp"
        android:layout_marginTop="16dp"
        android:text="100"
        android:textSize="45sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partialButton" />

    <TextView
        android:id="@+id/velocityUnity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:text="@string/trip_unitKilometersHour"
        android:textSize="45sp"
        app:layout_constraintStart_toEndOf="@+id/currentVelocity"
        app:layout_constraintTop_toBottomOf="@+id/partialButton" />

    <ImageButton
        android:id="@+id/decrementButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/remove_circle_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/currentVelocity"
        app:layout_constraintHorizontal_bias="0.569"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/partialButton"
        app:layout_constraintVertical_bias="0.152" />

    <ImageButton
        android:id="@+id/incrementButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/add_circle_black_24dp"
        android:longClickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/velocityUnity"
        app:layout_constraintTop_toBottomOf="@+id/partialButton"
        app:layout_constraintVertical_bias="0.152" />

    <ImageButton
        android:id="@+id/playpauseButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_play_arrow_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.244"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/currentVelocity"
        app:layout_constraintVertical_bias="0.032" />

    <ImageButton
        android:id="@+id/stopButton"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:background="@null"
        android:scaleType="fitXY"
        android:src="@drawable/ic_baseline_stop_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.746"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/velocityUnity"
        app:layout_constraintVertical_bias="0.032" />

</androidx.constraintlayout.widget.ConstraintLayout>